[package]
name = "sort"
version = "0.1.0"
authors = ["Matrosov Sergey <matrosik14@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "heap_sort_bench"
harness = false

[[bench]]
name = "selection_sort_bench"
harness = false

[[bench]]
name = "selection_vs_heap_bench"
harness = false