[package]
name = "sort"
version = "0.1.0"
authors = ["Matrosov Sergey <matrosik14@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"
gnuplot = "0.0.37"

[dev-dependencies]
criterion = "0.3"


[[example]]
name = "selection_vs_heap_time"
path = "examples/selection_vs_heap/time.rs"

[[example]]
name = "selection_vs_heap_order"
path = "examples/selection_vs_heap/order.rs"

# [[example]]
# name = "selection_vs_heap_order"
# path = "examples/selection_vs_heap/order.rs"


[[bench]]
name = "heap_sort_bench"
harness = false

[[bench]]
name = "selection_sort_bench"
harness = false

[[bench]]
name = "selection_vs_heap_bench"
harness = false

[[bench]]
name = "qsort_rec_vs_it_bench"
harness = false